Change git user email

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Sovannara Hak
-	email = hak.sovannara@gmail.com
+	email = sovannara-hak@users.noreply.github.com
 
 [core]
     editor = vim
